k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nodegoat-ingress
  namespace: nodegoat

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:

  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:

            name: nodegoat

            port:

              number: 80
